fix(scrollbar): width of scrollbar is `4`

--- a/src/ui/style/index.less
+++ b/src/ui/style/index.less
@@ -35,7 +35,8 @@ body {
 
 *::-webkit-scrollbar {
   background-color:#fff;
-  width:16px
+  width: 12px;
+  height: 12px;
 }
 
 /* background of the scrollbar except button or resizer */
